Bug 490826 - [Keyboard filters] Slow keys does nothing on Wayland
Summary: [Keyboard filters] Slow keys does nothing on Wayland
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_access (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: accessibility, wayland-only
Depends on:
Blocks:
 
Reported: 2024-07-25 17:41 UTC by Thiago Sueto
Modified: 2026-01-02 13:20 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thiago Sueto 2024-07-25 17:41:16 UTC
SUMMARY
If you go to the Accessibility KCM, Keyboard Filters, enabling "Slow keys" does nothing on Wayland, while on X11 it works.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20240629
KDE Plasma Version: 6.1.1
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.2
Kernel Version: 6.9.7-1-default (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-7200U CPU @ 2.50GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 620
Manufacturer: Dell Inc.
Product Name: Inspiron 5567
Comment 1 Bug Janitor Service 2025-11-27 16:09:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8491
Comment 2 David Edmundson 2026-01-02 13:20:25 UTC
Git commit c119fce270c6ce24fe8c8ccc41809dd1e595a5d0 by David Edmundson, on behalf of Martin Riethmayer.
Committed on 02/01/2026 at 13:15.
Pushed by davidedmundson into branch 'master'.

Implement SlowKeys for KWin Wayland

Closely following the implementation of BounceKeys.
FIXED-IN: 6.6.0

M  +1    -0    autotests/integration/CMakeLists.txt
A  +115  -0    autotests/integration/slow_keys_test.cpp     [License: GPL(v2.0+)]
M  +1    -0    src/input.h
M  +1    -0    src/plugins/CMakeLists.txt
A  +18   -0    src/plugins/slowkeys/CMakeLists.txt
A  +23   -0    src/plugins/slowkeys/main.cpp     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]
A  +5    -0    src/plugins/slowkeys/metadata.json
A  +97   -0    src/plugins/slowkeys/slowkeys.cpp     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]
A  +36   -0    src/plugins/slowkeys/slowkeys.h     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]

https://invent.kde.org/plasma/kwin/-/commit/c119fce270c6ce24fe8c8ccc41809dd1e595a5d0