Implement SlowKeys for KWin Wayland

Closely following the implementation of BounceKeys.

BUG: 490826
FIXED-IN: 6.6.0