src/plugins/slowkeys/main.cpp
@@ -1,0 +1,23 @@
+/*
+    SPDX-FileCopyrightText: 2025 Martin Riethmayer <ripper@freakmail.de>
+
+    SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL
+*/
+#include "plugin.h"
+
+#include "slowkeys.h"
+
+class KWIN_EXPORT SlowKeysFactory : public KWin::PluginFactory
+{
+    Q_OBJECT
+    Q_PLUGIN_METADATA(IID PluginFactory_iid FILE "metadata.json")
+    Q_INTERFACES(KWin::PluginFactory)
+
+public:
+    std::unique_ptr<KWin::Plugin> create() const override
+    {
+        return std::make_unique<KWin::SlowKeysFilter>();
+    }
+};
+
+#include "main.moc"
